# EGO-Planner-v2

swarm-playground/main_ws/: test_urban_5_drones.sh  urban_5_drone_test.launch
swarm-playground/main_ws/devel/: .catkin
swarm-playground/main_ws/devel/lib/assign_goals/: assign_goals_node
swarm-playground/main_ws/devel/lib/local_sensing_node/: pcl_render_node
swarm-playground/main_ws/devel/lib/manual_take_over/: manual_take_over  manual_take_over_station
swarm-playground/main_ws/devel/lib/odom_visualization/: odom_visualization
swarm-playground/main_ws/devel/lib/pkgconfig/: assign_goals.pc  drone_detect.pc  ego_planner.pc  local_sensing_node.pc  manual_take_over.pc  map_generator.pc  mockamap.pc  moving_obstacles.pc  odom_visualization.pc  path_searching.pc  plan_env.pc  poscmd_2_odom.pc  pose_utils.pc  quadrotor_msgs.pc  random_goals.pc  (+8 more)
swarm-playground/ros_to_dynamodb/: CMakeLists.txt  QUICK_COMMANDS.txt  QUICK_START.md  README.md  UBUNTU_SETUP_GUIDE.md  package.xml
swarm-playground/ros_to_dynamodb/config/: bridge_config.yaml  drone_0_cloud.yaml
swarm-playground/ros_to_dynamodb/launch/: drone_0_cloud.launch  ros_to_dynamodb.launch
swarm-playground/ros_to_dynamodb/scripts/: greengrass_stream.py  query_data.py  realtime_viz.py  ros_to_dynamodb_bridge.py  run_realtime_bridge.sh  setup_aws.py  setup_credentials.sh  setup_greengrass.py  setup_iot_rule.py  setup_swarm_coordination.py  simple_stream.py  start_swarm_streaming.sh  swarm_aware_stream.py  test_greengrass.py  test_push.py  test_stream_local.py  test_swarm_coordination.py  verify_swarm_setup.py
(+32 files in other folders)
