<?xml version="1.0"?>
<package format="2">
  <name>ros_to_dynamodb</name>
  <version>1.0.0</version>
  <description>Bridge to transfer ROS topic data to AWS DynamoDB</description>

  <maintainer email="user@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-boto3</exec_depend>

  <export>
  </export>
</package>

